
2007-12-03  Lynn Garren

	* HepMC/CommonIO.h, src/CommonIO.cc: 
	  new header for shared IO methods and keys
	
	* src/IO_GenEvent.cc: use CommonIO
	  search for any of several allowed input data types

	* HepMC/IO_GenEvent.h: disable write_particle_data_table and 
	  fill_particle_data_table - that is best done outside HepMC

  --------------------------  HepMC-2.03.01  --------------------------

2007-11-26  Lynn Garren

	* configure.in: add support for g++-*

2007-11-26  Lynn Garren

	* src/IO_GenEvent.cc: bug fix - fill event scale, alphaQED, and alphaQCD

  --------------------------  HepMC-2.03.00  --------------------------

2007-10-30  Lynn Garren

	* examples/example_ReadMyPythia.cc: New example to read the file 
	  written by example_MyPythia.

	* doc: remove the latex subdirectory after building the reference library

	* GenEvent: add print_version( std::ostream& ) method.
	  If you don't specify an ostream, the default is std::cout.

	* GenVertex: Store particles in vectors instead of sets.
	  Root IO does not properly restore the state of the particle 
	  serial number counter, so the previous solution to retaining
	  consistent particle ordering within a vertex had to be revisited.

	* IO_GenEvent: Replace the temparary particle map with TempParticleMap.

	* HepMC/SearchVector.h: Utilities to facilitate working with the
	  vector of particles.

	* HepMC/TempParticleMap.h: Temporary particle container that 
	  allows us to maintain particle ordering when reading an event 
	  with IO_Ascii and IO_ExtendedAscii.

	* Use fully qualified names (e.g., HepMC::GenParticle) inside class
	  templates (e.g., std::map<>) wherever they are used within a 
	  header so that rootcint can make the dictionary.

  --------------------------  HepMC-2.02.01  --------------------------

2007-10-16  Lynn Garren

	* configure.in: build dynamic libraries for MacOSX - thanks to James Monk

  --------------------------  HepMC-2.02.00  --------------------------
